crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__function__empty_body.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/function/empty_body.lox
---
success: true
exit_code: 0
----- stdout -----
nil

----- stderr -----
