crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__function__local_recursion.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/function/local_recursion.lox
---
success: true
exit_code: 0
----- stdout -----
21

----- stderr -----
