crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__function__missing_comma_in_parameters.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/function/missing_comma_in_parameters.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: at `c`: expected RParen
   ╭─[craftinginterpreters/test/function/missing_comma_in_parameters.lox:3:14]
   │
 3 │ fun foo(a, b c, d, e, f) {}
   │              ─  
───╯
