crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__function__mutual_recursion.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/function/mutual_recursion.lox
---
success: true
exit_code: 0
----- stdout -----
true
true

----- stderr -----
