crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__function__recursion.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/function/recursion.lox
---
success: true
exit_code: 0
----- stdout -----
21

----- stderr -----
