crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__function__too_many_arguments.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/function/too_many_arguments.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: arity error: `<function foo at [POINTER]>` expects 0 args but 256 args were passed
   ╭─[craftinginterpreters/test/function/too_many_arguments.lox:4:3]
   │
 4 │   foo(
   │   ─┬─  
   │    ╰─── expects 0 arguments
───╯
